--- a/_config.yml
+++ b/_config.yml
@@ -103,4 +103,7 @@ theme: frame
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/huiming-chen/blog
+  # example, https://github.com/hexojs/hexojs.github.io
+  branch: gh-pages
