--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 薈茗
-subtitle: ''
-description: ''
-keywords:
-author: John Doe
+title: 陳薈茗 Hui Ming Chen
+subtitle: '藝術家,攝影及平面設計自由接案工作者. Artist, photographer and a freelance graphic designer.'
+description: '藝術家,攝影及平面設計自由接案工作者,現就讀於國立臺北藝術大學新媒體藝術研究所,創作媒材以攝影及錄像為主,創作題材取自對於現實世界的抽象感知,傳達精神上的理念及意涵。Hui Ming Chen, Artist, photographer and a freelance graphic designer. She focuses on photography and video art, currently studying at the Department of New Media, TNUA. Her creative inspiration is derived from abstract perceptions of the real world, conveying conceptual and meaningful aspects.'
+keywords: Artist, Designer, Photographer, New Media Art, 藝術家, 藝術, 攝影師, 設計師, 平面設計
+author:  陳薈茗 Hui Ming Chen
 language: en
 timezone: ''
 
